# ChangeLog for media-sound/cmus
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/cmus/ChangeLog,v 1.64 2013/05/05 20:11:26 fauli Exp $

  05 May 2013; Christian Faulhammer <fauli@gentoo.org> -cmus-2.4.3.ebuild,
  -cmus-2.5.0.ebuild:
  clean up

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> cmus-2.5.0-r1.ebuild:
  Stable for x86, wrt bug #468646

  05 May 2013; Agostino Sarubbo <ago@gentoo.org> cmus-2.5.0-r1.ebuild:
  Stable for amd64, wrt bug #468646

*cmus-2.5.0-r1 (21 Apr 2013)

  21 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> +cmus-2.5.0-r1.ebuild,
  +files/cmus-2.5.0-cdio-make-it-work-with-libcdio-0.90.patch:
  Fix compability with dev-libs/libcdio-paranoia >= 0.90 wrt #452446

  20 Jan 2013; Christian Faulhammer <fauli@gentoo.org> cmus-2.5.0.ebuild:
  fix cdio issues, bug 452446

  19 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> cmus-2.5.0.ebuild:
  IUSE and dependency used "cdda" but my_config had "cdio" wrt #452446

*cmus-2.5.0 (18 Nov 2012)

  18 Nov 2012; Christian Faulhammer <fauli@gentoo.org> +cmus-2.5.0.ebuild,
  metadata.xml:
  version bump for bug 443436

  19 May 2012; Samuli Suominen <ssuominen@gentoo.org> cmus-2.4.3.ebuild:
  Ensure libmp4v2 headers are present by forcing correct SLOT

  16 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> -cmus-2.4.2.ebuild,
  -files/cmus-2.4.2-ffmpeg.patch, cmus-2.4.3.ebuild:
  Stable on amd64 and x86. Depend on new ffmpeg as it uses new api.

  05 May 2012; Michał Górny <mgorny@gentoo.org> cmus-2.4.2.ebuild,
  cmus-2.4.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Jan 2012; Agostino Sarubbo <ago@gentoo.org> cmus-2.4.2.ebuild,
  cmus-2.4.3.ebuild:
  force libmikmod to slot 0, as ssuominen suggested

*cmus-2.4.3 (01 Dec 2011)

  01 Dec 2011; Tim Harder <radhermit@gentoo.org> +cmus-2.4.3.ebuild:
  Version bump.

  02 Nov 2011; Tim Harder <radhermit@gentoo.org> -cmus-2.3.2.ebuild,