@@ -3,13 +3,17 @@ Hash: SHA256
 
 AUX cmus-2.5.0-cdio-make-it-work-with-libcdio-0.90.patch 3080 SHA256 5c28f763c34609a52a613c6c264a301c4cc21cb620d4cd0074786e27dca194c8 SHA512 8670c44c20819c724d1a14b8cc598b7987b5b220e93a5b799dd5355da0fd431e42ea6de450489a7c7e3ca3da5404679c0a491ced993e22fa73e1b3eb604fd8e6 WHIRLPOOL c2e8c89fde7be1839af9a335879f5959b812c93a3a1fe2023fbace221f846b87595f2b5fd6e57716aeb1dcfed1f781ab15fa58850cca79d038443095a34c4210
 DIST cmus-v2.5.0.tar.bz2 224675 SHA256 2021fab64088898d62d1439525ec345e219f58d91a9e933dc85e84eda21c8ddf SHA512 a43e976dd7ca39d576ae51b0f66f9bc4fa21f30626cb814fa237389c9bbc1c0b5a3a28b1d3d0d86527c3a3ffb771cc68d29d5ca8b88f0390bda7926e668504e4 WHIRLPOOL 44baaf57e0e572736f7d2ed2fa1f16c6712831c1e10de5ef26a142f7b366547fa39212e5f947fbba6401212c9ffd41f208f4cbc457d9d9ac9f08282fbedbeb3c
-EBUILD cmus-2.5.0-r1.ebuild 2729 SHA256 bba367f45ca5e75899d344b0c6fe9bd0e0506dca361eda8b0ff0b27fb9499a87 SHA512 36c7e7a3becca6f104ce0b500484a0e49475be9115a2730e1062fba2ed0bc1155015272c6548c6542c05913e078062152b60ca6b2d25f559ad938ade96acd630 WHIRLPOOL 31cee99d2dd42215c60243c03a50a88bbb1fef2842660d7ef519edf741eaea9f4f42e1d4cf438eb59b9b94ad77c14fe6f7ae51db7d90620f4e1b00d0a0fa2dd1
-MISC ChangeLog 9716 SHA256 d9a2296245941d51dd7af62b5caaf21f84614216f3bc7f8daa01315269c0a593 SHA512 f922cb5fc2bb37fc1b06ceeb41eb5c23190d23966b6d01a68aee2000d3d5e0000b11dc7a33cc41f52224a74a9d073c20a122ec3f1a50284bb05ad89cd44baeeb WHIRLPOOL cffbe27002b1022d4bef85837fcc67823299a98e4f2f76bd600a068d7d0c997783fd919be546ac453559fe73c09394269b24bc1b3ab50e78b5634c98c1ec271f
+EBUILD cmus-2.5.0-r1.ebuild 2806 SHA256 225e779690179c6a87a2a2865dce60bab367a58bf6b01850c7e02d6510d2c062 SHA512 30764a882e6a681cef866fdc0ef72686733bf0db6b9c485dd6b524ad16c53061fbeaf3327d95c668983a4c0b8089b96ddeb2d3750bb61b993da45146ef44be0b WHIRLPOOL 270c7a25503e4fedef0f2ea6f8fed19878ed88944a5147077365c458afb7c8a9c2e1a101b9a525fdfbb1048ac3d466a9c93c4710b2881943b4c3d46bd4e88897
+MISC ChangeLog 9817 SHA256 8be3be7236a81a956121391e7df131c5b3358f0a8532746ad02b7dc9a9e14b0f SHA512 3501abe9c18c28c1790f7251ae8a876c1f0a36aca0253208faa7f69f50447da20f6c47f64076a4c7d64395290968a33f881866c348d357a64650223d4a224836 WHIRLPOOL 2fd8583ca3af7da23d2e9091c13bd8a2cd64677ece86aa8330468e9fb49aad3c71a60ae66fe0e202a54378645439328d04d6870f9f18ea416d7f8f7526dcf732
 MISC metadata.xml 611 SHA256 d97e31156c3093352fd75327f7ebff1f97e6babf6b9f372277ab16c03811125f SHA512 5cda481701d4f94f8a09c06f7d0a7f583115d6e555bb33840384e6c0da9644218614cdbca0d6575641c341b2143d6cd852907ab2169b66d7d967f8f9d1eb29d9 WHIRLPOOL e3c34ac2fab6d1dabc290ee352f2e01532721d74295fc0ab012ef192e88fa9113eea601f863af429b25177ee153dd338443cdf6ce3e669fdfbeb3b1964df7fd6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGGvPUACgkQNQqtfCuFneMW+gCcDXpPsbXoTqq2oDPA0hqe3K5k
-0xgAnR2ce1GTj2uL5CMt874JghR9R+Qz
-=CX+9
+iQEcBAEBCAAGBQJR2GavAAoJEOeBhlrCAAWGgeoH/j7pmGiUtDdUY/+eey3p1WjA
+xSLuIolKDqNfJQVZfJAk+iColzMf9Sep8xjrOVIvmkBEkkTY7mIl5IsRPJupuaAJ
+bBxD+AkA2OJ1fAivwGbCihg0NdKiR7VchS0vDuaPH64tSJuAyBmpuUQcJAItLnnE
+jtrsX/seRbL13MI8IecqTpGaBKHZOJv127LqLUeqMTxfEL7CSJOBOnaMEbeAmxUB
+Yl0czDwbOfFenKSlE0+X1aLI4qh6pYka8yi9khy3UpPiYVHub2ypFJp3CAVsC+ea
+BHVpU8g9YxRnyJvzlr83q2JYaVw/bQAoEHNVk5IWAh89WSe0ARTlXXgJ2W4oa8o=
+=2+Zj
 -----END PGP SIGNATURE-----
