@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cmus/cmus-2.5.0-r1.ebuild,v 1.3 2013/05/05 12:09:52 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cmus/cmus-2.5.0-r1.ebuild,v 1.4 2013/07/06 18:49:13 ottxor Exp $
 
 EAPI=5
 inherit eutils multilib
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/cmus/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~ppc x86 ~x86-fbsd"
+KEYWORDS="amd64 ~ppc x86 ~x86-fbsd ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="aac alsa ao cue cdio cddb discid debug examples flac mad mikmod modplug mp4 musepack oss pidgin pulseaudio unicode vorbis wavpack wma zsh-completion"
 
 CDEPEND="sys-libs/ncurses[unicode?]
@@ -77,14 +77,14 @@ src_configure() {
 	my_config ao CONFIG_AO
 	my_config oss CONFIG_OSS
 
-	./configure prefix=/usr ${myconf} exampledir=/usr/share/doc/${PF}/examples \
-		libdir=/usr/$(get_libdir) DEBUG=${debuglevel} || die
+	./configure prefix="${EPREFIX}"/usr ${myconf} exampledir="${EPREFIX}"/usr/share/doc/${PF}/examples \
+		libdir="${EPREFIX}"/usr/$(get_libdir) DEBUG=${debuglevel} || die
 }
 
 src_install() {
 	default
 
-	use examples || rm -rf "${D}"/usr/share/doc/${PF}/examples
+	use examples || rm -rf "${ED}"/usr/share/doc/${PF}/examples
 
 	if use zsh-completion; then
 		insinto /usr/share/zsh/site-functions
