@@ -1,9 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX ecasound-2.8.1-ldflags.patch 2715 SHA256 79267748a8954eaf37b332033f7ee8e2a85113cde5ce17afae153c7e7b39381a SHA512 2cf1d68b04c651480fdabb04e6e68c2d52d05405ea3c4813aa12cdca1c7fca8f80aa524d7424b98d4cf376cfabe372766a2fc2e5f564f8eff0125c7c4ad06d1b WHIRLPOOL db57c7dd3954e4028c82544f83b2a831996d542a41dcc3e0b9897d2878afd136ed7c52f6e2b90efdca5bf5684ca6c1a319061f0756e7ce849b6b3caeffdb80a5
 DIST ecasound-2.6.0.tar.gz 966629 SHA256 925d12a422883c356565c542110d070f61c3693e01eaa1b00eb25082e4779f88
 DIST ecasound-2.8.1.tar.gz 1056331 SHA256 e55accabeaf5cc5dcaac56cdb83dabb908ad1195d79c2a3df7718b834d328994
 DIST ecasound-2.9.0.tar.gz 1055913 SHA256 e2b0b8f8cce6074d660e460b3a02fc0132a51e1e982b78b3a68fa14e79fcc6c6 SHA512 d8ba4274413616b37084f716ca9c91434280cc600e5e2c231a755cbe27b05df0095b8178d280c2e576d91d04ff27aad4793ecec70c1bbb8b2ae73a030c8cbb13 WHIRLPOOL 7f9ce963a8e971b8d6a169cd07d82349f4050853b2f7b9f3a35c3c99754be1da14555ff9c61213c0f44b869a9f514a68860336e83d055e15b34268b2dc92d868
 EBUILD ecasound-2.6.0.ebuild 1977 SHA256 544554827269fcb5a3fea26bf9b0df1b180f6d6d4eb229b2be02b7a5da121597 SHA512 989fd558f6619ff279f0e098e249ed1e6195f02a960870b86d7850d49f6ab900b8e3ef64e75a23ec798856117502042360abe90007360fdf19bf8848fce23468 WHIRLPOOL 5a635bf71e3eddbfe36b6dacd2962110b4655060c33d800c59f6f465eadb470ec0f2cad0484d773b4c0c68da6ebb4f504fb06fcc2d69e152e2c3cdda16efa869
 EBUILD ecasound-2.8.1.ebuild 2420 SHA256 956accf4a805a9bd9ccf946f5adb3aef692071557fa5470a55561d5b92ccf9b6 SHA512 d52f7af23d632b43613666f6f19efe49cd3ca5f50be5c688afe73da379e2253283ab180d817afde50d00def96adde41b8c957a5016a2b356efd1a52674c0174b WHIRLPOOL 422d41af506e99ba610981f8d6de1d429ea6ee743f124ab2d695aef6acaae16a4562d3350644776ad5a95ca98c05cacba5333534a9ed73f5f00970b288a43550
-EBUILD ecasound-2.9.0.ebuild 2445 SHA256 af75001a5bf2f08ec4cc1f83abf85770510ac8f1f3653061d6b61ae4e0eff0ee SHA512 6f66fa357a03d7d966587972fd07a5b340efcc8c9921961ec98aa1b760cef557d33760622dc1b4a3bda210491448525c69bf6f91d631538abfaec863501a2637 WHIRLPOOL b7a14bf7ae2c1ae5a6932025c75a1581f725e02cb0ad4349257e8103ae28074784c70f2e67927fc1b5af9571997a068fd4f0e3e3da9f9e89395a6f8c53c1b7a8
-MISC ChangeLog 10275 SHA256 4cf444fc31860a8ea6db58ecb67d29d2a2f930dce36887b2ee32d7f1d77a2bdd SHA512 a6c387d6c32bcce1af6ce3f099263935211f574fa049767a2d9dd7cf377753e043018031751accee54d3225ed2003ca1403812737ccef5a1c497d2ee03ad2641 WHIRLPOOL b698499dda179458fa003727db8b55a80594b994df7ad2b7507461c2faca1bff5a4597f7f306bfd1d09c14f1d8caa4d07af6cf7fc1df5d11212c07c6c3907774
+EBUILD ecasound-2.9.0.ebuild 2514 SHA256 b59507ddec8e35571493636f6a0a03523ed06398212eba8bad2c4042153fe17a SHA512 769b1b56b1333769709515ce4a20d66a86e1477c637618f4340f67cf18e910514726e67cb4f1393ab789ca309715b0339db8afa5139b9509c8eb60bd60d3e0b8 WHIRLPOOL c83519d06dbf0d5ce5ba25180b13c59e27c574158307545c09395743d49139a1781f3029766e29275d0bfecf1204f77d824638a16eb63dcdb8b1f1e6c5880e78
+MISC ChangeLog 10378 SHA256 a8cdbd6f16daba50c3a7202a5995554c58c7d46c01cebbbecb7dd4f277586c61 SHA512 0be8b6ae493ef73772a61bc5bda83eaf5b1362b8945fde043621533549f3f94b2a7609e128544788e22b77524764aefd577043fcb1239a548f993c8e4a165a0a WHIRLPOOL 81fa228816c375cfcdc6822ffbc283b62eb8556af44a58925d1d3e37b66cdc3fddf234f7bb727dab469b7c60afa02499a25cdf8b1d4433cf04dfa317bf723a18
 MISC metadata.xml 897 SHA256 730adb94504de6b61b6614960773d218f759bad74bc4fd208d780524384f9f66 SHA512 f15398823670795f897b3e2bb4f51ef73b19a865ce7d15e32497321f0c322b1a726bd94f80d278217b402de49d6a5f435a8b09db1c9011595ac9acfe5a2095b2 WHIRLPOOL 509ed6dcff109e74d74b0dfbf95a13776377a99ede98dd126401032a38e62449d38ed3e997bf02de940ad98e962f75eb754d13cb5b3ff1e3af88237df763d9c7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJR2Ge3AAoJEOeBhlrCAAWGR+sIAJx7qgOFNH00ZrlGWicMi4r4
+O79MxJaqIl2lA1JiEulCLPiJvWvdKf4x+ehE+5NYt9N2emGHeQvqXCYPdhTyUdLt
+dp2QqgcjMa2IEpO9CbTFpZfk2QbRQDnC6OVTorpkQOXSijI1sycm9k3txtdu/HTM
+RUF+Fg9LXOxzSU36znBShnE9BujHeNUFShp4axz3oQ55JuVMFhXeI1vkc29CyoB7
+gxBVeBnbDkjRZhVUNaMBhnVsVgXGCZlhOctvwJLidEzlF7TVayThFh90XakdFUnH
+lksXpSzNmpobvA2kMMDNooX1bc1YBVzwL5JrE3CmQmq6Hip+arNQdv43T5VH9YY=
+=nhto
+-----END PGP SIGNATURE-----
