@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/ecasound
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.66 2012/12/11 19:12:32 ago Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.67 2013/07/06 18:53:41 ottxor Exp $
+
+  06 Jul 2013; Christoph Junghans <ottxor@gentoo.org> ecasound-2.9.0.ebuild:
+  added prefix support
 
   11 Dec 2012; Agostino Sarubbo <ago@gentoo.org> ecasound-2.9.0.ebuild:
   Add ~ppc, wrt bug #421061
@@ -289,4 +292,3 @@
   directory of the portage repository.  Thanks to Jay Felice <jfelice@cronosys.com>
   for the ebuild.
 	  
-
